# opensase-hr

./: .env.example  API_SPEC.yaml  ARCHITECTURE.md  COMPLIANCE.md  Cargo.toml  Dockerfile  PERFORMANCE.md  PLAN.md  README.md  docker-compose.yml
design/: FIGMA_MAKE_PROMPT.token
eventing/pulsar/: client-config.yaml  topics.yaml
migrations/: 001_initial.sql  001_initial_schema.sql  002_comprehensive_schema.sql
observability/quickwit/: index-config.yaml
src/: lib.rs  main.rs
src/auth/: jwt.rs  mod.rs  rbac.rs
src/benefits/: mod.rs  models.rs
src/compliance/: global_compliance.rs  mod.rs  models.rs
src/controller/: mod.rs
src/domain/: mod.rs
src/domain/aggregates/: employee.rs  mod.rs  payroll.rs
src/domain/events/: mod.rs
src/domain/services/: mod.rs
src/domain/value_objects/: employee_id.rs  mod.rs  pay_rate.rs  tax_id.rs
src/leave/: handlers.rs  mod.rs  models.rs  service.rs
src/ops/: mod.rs
src/payroll/: africa_mobile_gateway.rs  asia_pacific.rs  central_eastern_europe.rs  developed_asia.rs  europe_east_noneu.rs  handlers.rs  middle_east.rs  mobile_money.rs  mod.rs  models.rs  pension.rs  service.rs  south_africa.rs  south_america.rs  southern_europe.rs  tax_calculator.rs  west_africa.rs  west_africa_enhanced.rs  western_europe.rs
src/performance/: mod.rs  models.rs  service.rs
src/recruitment/: ai_scorer.rs  mod.rs  models.rs  service.rs
src/sms/: mod.rs
web/: package-lock.json  package.json
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/app/dashboard/benefits/: page.tsx
web/src/app/dashboard/compliance/: page.tsx
web/src/app/dashboard/employees/: page.tsx
web/src/app/dashboard/leave/: page.tsx
web/src/app/dashboard/payroll/: page.tsx
web/src/components/dashboard/: LeaveRequests.tsx  PayrollOverview.tsx  StatsCard.tsx
web/src/components/employees/: EmployeeTable.tsx
web/src/components/layout/: Header.tsx  Sidebar.tsx
web/src/components/payroll/: TaxCalculator.tsx
web/src/lib/: api.ts  nigerian-locale.ts
(+2 files in other folders)
