[package]
name = "sase-hr"
version = "0.1.0"
edition = "2021"
authors = ["OpenSASE Team"]
description = "Self-hosted HR & Payroll platform - BambooHR/Gusto replacement"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
dashmap = "5.5"
rust_decimal = { version = "1.36", features = ["serde"] }
